--- a/res/layout/call_log_list_item_actions.xml
+++ b/res/layout/call_log_list_item_actions.xml
@@ -93,6 +93,22 @@
             android:focusable="true"
             android:singleLine="true"/>
         <TextView
+            android:id="@+id/user_mark_action"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingStart="@dimen/call_log_action_horizontal_padding"
+            android:paddingEnd="@dimen/call_log_action_horizontal_padding"
+            android:text="@string/call_log_action_user_mark"
+            android:textColor="?attr/call_log_secondary_text_color"
+            android:textSize="@dimen/call_log_list_item_actions_text_size"
+            android:textStyle="bold"
+            android:nextFocusLeft="@+id/details_action"
+            android:nextFocusRight="@+id/report_action"
+            android:focusable="true"
+            android:singleLine="true"/>
+        <TextView
             android:id="@+id/report_action"
             android:background="?android:attr/selectableItemBackground"
             android:gravity="center"
@@ -104,7 +120,7 @@
             android:textColor="?attr/call_log_secondary_text_color"
             android:textSize="@dimen/call_log_list_item_actions_text_size"
             android:textStyle="bold"
-            android:nextFocusLeft="@+id/details_action"
+            android:nextFocusLeft="@+id/user_mark_action"
             android:nextFocusRight="@+id/primary_action_view"
             android:focusable="true"
             android:singleLine="true"
