--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -70,7 +70,7 @@
         <item name="call_log_voicemail_status_background_color">#262626</item>
         <item name="call_log_voicemail_status_text_color">#888888</item>
         <item name="call_log_voicemail_status_action_text_color">#33b5e5</item>
-            <!-- Favorites -->
+        <!-- Favorites -->
         <item name="favorites_padding_bottom">?android:attr/actionBarSize</item>
         <item name="android:colorPrimary">@color/dialer_theme_color</item>
         <item name="android:colorPrimaryDark">@color/dialer_theme_color_dark</item>
@@ -206,5 +206,17 @@
         <item name="android:ellipsize">marquee</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="MiniMarkActivityStyle" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:colorPrimaryDark">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/dialer_theme_color_dark</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="MiniMarkRootViewStyle" parent="android:Theme.Material.Light">
+        <item name="android:listViewStyle">@style/ListViewStyle</item>
     </style>
 </resources>
