--- a/res/values/sm_strings.xml
+++ b/res/values/sm_strings.xml
@@ -39,5 +39,7 @@
     <string name="cloud_location_lookup_mark_delivery">Delivery</string>
     <string name="cloud_location_lookup_mark_service">Customer Service</string>
     <string name="cloud_location_lookup_mark_taxi">Taxi</string>
+    <string name="use_cloud_mark">来去电云归属</string>
+    <string name="use_cloud_mark_summary">来去电时先通过网络查询归属，可能会造成延时</string>
 
 </resources>
